tests/ui/lexer/unterminated-comment.stderr
error[E0758]: unterminated block comment
  --> $DIR/unterminated-comment.rs:1:1
   |
LL | /*
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0758`.
